unix/lang/tests/error/library11.yab
# library called in import_error_line_number.yab
# The next line will trigger an error; the correct line number will be checked

This cannot be parsed :-/
